--- a/styles.css
+++ b/styles.css
@@ -73,28 +73,37 @@ font-size: 1.2em;
 color: red;
 }
 
-.photo-gallery {
-display: grid;
-grid-template-columns: repeat(3 , 1fr);
-grid-column-gap: 15px;
-grid-row-gap: 10px;
-}
+div.gallery {
+    border: 1px solid #ccc;
+  }
+  
+  div.gallery:hover {
+    border: 1px solid #777;
+  }
+  
+  div.gallery img {
+    width: 100%;
+    height: auto;
+  }
 
-.gallery-item {
-background-color: #e6e6ff;
-cursor: pointer;
-}
-
-.gallery-item img {
-width: 100%;
-display: block;
-padding: 0;
-margin: 0;
-}
-
-.gallery-item img:hover {
-opacity: 0.5;
-}
+.responsive {
+    padding: 0 6px;
+    float: left;
+    width: 24.99999%;
+  }
+  
+  @media only screen and (max-width: 700px) {
+    .responsive {
+      width: 49.99999%;
+      margin: 6px 0;
+    }
+  }
+  
+  @media only screen and (max-width: 500px) {
+    .responsive {
+      width: 100%;
+    }
+  }
 
 #stuffs{
 color: BLACK;
@@ -114,7 +123,3 @@ aside h2 {
 padding-bottom: 10px;
 }
 
-.photo-gallery {
-grid-template-columns: repeat(3 , 1fr);
-}
-}
