--- a/styles.css
+++ b/styles.css
@@ -112,7 +112,7 @@ color: BLACK;
 @media only screen and (min-width: 1024px) {
 #page {
 flex-direction: row;
-}
+}}
 
 aside {
 margin-left: 20px;
@@ -123,3 +123,31 @@ aside h2 {
 padding-bottom: 10px;
 }
 
+.video {
+  margin: 0 auto;
+}
+
+.video {
+  text-align: center;
+  padding: 0;
+  width: 50%;
+}
+
+video {
+  width: 50%;
+}
+.video-container {
+  position: relative;
+  padding-bottom: 56.25%;
+  padding-top: 35px;
+  height: 0;
+  overflow: hidden;
+}
+
+.video-container iframe {
+  position: absolute;
+  top:0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
