--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,16 @@ body {
 background-color: #333;
 color: WHITE;
 margin: 0;
+font-family: "Times New Roman", Times, serif;
 }
+
+body h1 {
+  background-color: #333;
+  color: WHITE;
+  margin: 0;
+  font-family: 'Alex Brush';
+}
+
 nav {
 background-color: #2980B9;
 padding: 0px 30px;
@@ -44,16 +53,6 @@ margin: 0px 15px;
 main {
 flex: 2;
 box-sizing: border-box
-}
-
-#ingredient-list {
-background-color: white;
-padding: 20px;
-}
-
-#directions {
-background-color: #e6e6ff;
-padding: 20px;
 }
 
 aside {
@@ -150,4 +149,15 @@ video {
   left: 0;
   width: 100%;
   height: 100%;
+}
+
+fonts-and-stuff
+{
+  font-family: "Times New Roman", Times, serif;
+}
+
+fonts-and-stuff h1
+{
+  font-family: 'Alex Brush';
+  font-size: 22px;
 }
